[package]
name = "llmtxt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shuttle-axum = "0.53.0"
shuttle-runtime = "0.53.0"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = {version = "0.6.2", features = ["cors", "timeout"]}
